--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,44 +11,32 @@
         android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="100dp"
         android:background="@color/colorButton"
         android:onClick="setProblems"
         android:text="@string/start"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textViewScore"
         app:layout_constraintEnd_toStartOf="@+id/submitButton"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/submitPicker1" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
     <Button
         android:id="@+id/submitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="100dp"
         android:background="@color/colorButton"
         android:onClick="submitAnswers"
         android:text="@string/submit"
         android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/textViewScore"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/startButton"
-        app:layout_constraintTop_toBottomOf="@+id/submitPicker1" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
     <TextView
         android:id="@+id/textViewScore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="8dp"
         android:background="@color/colorButton"
         android:fontFamily="sans-serif-medium"
         android:text="@string/score"
@@ -59,8 +47,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/startButton"
-        app:layout_constraintVertical_bias="0.322" />
+        app:layout_constraintTop_toBottomOf="@+id/startButton" />
 
     <View
         android:id="@+id/view"
@@ -86,7 +73,6 @@
         android:layout_marginEnd="8dp"
         android:background="@color/colorBlack"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/view" />
 
@@ -100,7 +86,6 @@
         android:background="@color/colorBlack"
         app:layout_constraintBottom_toTopOf="@+id/guitarString3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/guitarString1"
         app:layout_constraintVertical_bias="0.55" />
@@ -115,7 +100,6 @@
         android:background="@color/colorBlack"
         app:layout_constraintBottom_toTopOf="@+id/guitarString4"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent" />
 
     <View
@@ -128,7 +112,6 @@
         android:background="@color/colorBlack"
         app:layout_constraintBottom_toTopOf="@+id/guitarString5"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent" />
 
     <View
@@ -141,7 +124,6 @@
         android:background="@color/colorBlack"
         app:layout_constraintBottom_toTopOf="@+id/guitarString6"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent" />
 
     <View
@@ -153,7 +135,6 @@
         android:background="@color/colorBlack"
         app:layout_constraintBottom_toBottomOf="@+id/view"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.488"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
@@ -167,7 +148,6 @@
         android:textSize="40sp"
         android:typeface="monospace"
         app:layout_constraintEnd_toStartOf="@+id/fret2"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guitarString5" />
 
@@ -182,7 +162,6 @@
         android:textSize="40sp"
         android:typeface="monospace"
         app:layout_constraintEnd_toStartOf="@+id/fret3"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/fret1"
         app:layout_constraintTop_toTopOf="@+id/guitarString5" />
 
@@ -197,7 +176,6 @@
         android:textSize="40sp"
         android:typeface="monospace"
         app:layout_constraintEnd_toStartOf="@+id/fret4"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/fret2"
         app:layout_constraintTop_toTopOf="@+id/guitarString5" />
 
@@ -212,7 +190,6 @@
         android:textSize="40sp"
         android:typeface="monospace"
         app:layout_constraintEnd_toStartOf="@+id/fret5"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/fret3"
         app:layout_constraintTop_toTopOf="@+id/guitarString5" />
 
@@ -227,7 +204,6 @@
         android:textSize="40sp"
         android:typeface="monospace"
         app:layout_constraintEnd_toStartOf="@+id/fret6"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/fret4"
         app:layout_constraintTop_toTopOf="@+id/guitarString5" />
 
@@ -250,9 +226,9 @@
         android:id="@+id/constraintLayout"
         android:layout_width="350dp"
         android:layout_height="90dp"
-        android:layout_marginTop="35dp"
         android:gravity="center"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/startButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view">
