--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textViewScore"
         app:layout_constraintEnd_toStartOf="@+id/submitButton"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutNumberPicker" />
 
     <Button
         android:id="@+id/submitButton"
@@ -31,7 +31,7 @@
         app:layout_constraintBottom_toTopOf="@+id/textViewScore"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/startButton"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutNumberPicker" />
 
     <TextView
         android:id="@+id/textViewScore"
@@ -60,7 +60,7 @@
         android:background="@android:color/white"
         android:gravity="center"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayoutNumberPicker"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -68,7 +68,7 @@
         <View
             android:id="@+id/guitarString1"
             android:layout_width="wrap_content"
-            android:layout_height="5dp"
+            android:layout_height="@dimen/guitarStringHeight"
             android:background="@color/colorBlack"
             app:layout_constraintBottom_toTopOf="@+id/guitarString2"
             app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +79,7 @@
         <View
             android:id="@+id/guitarString2"
             android:layout_width="wrap_content"
-            android:layout_height="5dp"
+            android:layout_height="@dimen/guitarStringHeight"
             android:background="@color/colorBlack"
             app:layout_constraintBottom_toTopOf="@+id/guitarString3"
             app:layout_constraintEnd_toEndOf="parent"
@@ -90,7 +90,7 @@
         <View
             android:id="@+id/guitarString3"
             android:layout_width="wrap_content"
-            android:layout_height="5dp"
+            android:layout_height="@dimen/guitarStringHeight"
             android:background="@color/colorBlack"
             app:layout_constraintBottom_toTopOf="@+id/guitarString4"
             app:layout_constraintEnd_toEndOf="parent"
@@ -101,7 +101,7 @@
         <View
             android:id="@+id/guitarString4"
             android:layout_width="wrap_content"
-            android:layout_height="5dp"
+            android:layout_height="@dimen/guitarStringHeight"
             android:background="@color/colorBlack"
             app:layout_constraintBottom_toTopOf="@+id/guitarString5"
             app:layout_constraintEnd_toEndOf="parent"
@@ -112,7 +112,7 @@
         <View
             android:id="@+id/guitarString5"
             android:layout_width="wrap_content"
-            android:layout_height="5dp"
+            android:layout_height="@dimen/guitarStringHeight"
             android:background="@color/colorBlack"
             app:layout_constraintBottom_toTopOf="@+id/guitarString6"
             app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +123,7 @@
         <View
             android:id="@+id/guitarString6"
             android:layout_width="wrap_content"
-            android:layout_height="5dp"
+            android:layout_height="@dimen/guitarStringHeight"
             android:background="@color/colorBlack"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -157,15 +157,15 @@
 
         <TextView
             android:id="@+id/fret1"
-            android:layout_width="45dp"
-            android:layout_height="55dp"
+            android:layout_width="@dimen/problemNumberWidth"
+            android:layout_height="@dimen/problemNumberHeight"
             android:layout_marginStart="5dp"
             android:background="@drawable/textbox_default"
             android:gravity="center_vertical"
             android:text="@string/fret"
             android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:textSize="35sp"
+            android:textSize="@dimen/problemNumberTextSize"
             android:typeface="monospace"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/fret2"
@@ -174,14 +174,14 @@
 
         <TextView
             android:id="@+id/fret2"
-            android:layout_width="45dp"
-            android:layout_height="55dp"
+            android:layout_width="@dimen/problemNumberWidth"
+            android:layout_height="@dimen/problemNumberHeight"
             android:background="@drawable/textbox_default"
             android:gravity="center_vertical"
             android:text="@string/fret"
             android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:textSize="35sp"
+            android:textSize="@dimen/problemNumberTextSize"
             android:typeface="monospace"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/fret3"
@@ -190,14 +190,14 @@
 
         <TextView
             android:id="@+id/fret3"
-            android:layout_width="45dp"
-            android:layout_height="55dp"
+            android:layout_width="@dimen/problemNumberWidth"
+            android:layout_height="@dimen/problemNumberHeight"
             android:background="@drawable/textbox_default"
             android:gravity="center_vertical"
             android:text="@string/fret"
             android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:textSize="35sp"
+            android:textSize="@dimen/problemNumberTextSize"
             android:typeface="monospace"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/fret4"
@@ -206,14 +206,14 @@
 
         <TextView
             android:id="@+id/fret4"
-            android:layout_width="45dp"
-            android:layout_height="55dp"
+            android:layout_width="@dimen/problemNumberWidth"
+            android:layout_height="@dimen/problemNumberHeight"
             android:background="@drawable/textbox_default"
             android:gravity="center_vertical"
             android:text="@string/fret"
             android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:textSize="35sp"
+            android:textSize="@dimen/problemNumberTextSize"
             android:typeface="monospace"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/fret5"
@@ -222,14 +222,14 @@
 
         <TextView
             android:id="@+id/fret5"
-            android:layout_width="45dp"
-            android:layout_height="55dp"
+            android:layout_width="@dimen/problemNumberWidth"
+            android:layout_height="@dimen/problemNumberHeight"
             android:background="@drawable/textbox_default"
             android:gravity="center_vertical"
             android:text="@string/fret"
             android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:textSize="35sp"
+            android:textSize="@dimen/problemNumberTextSize"
             android:typeface="monospace"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/fret6"
@@ -238,15 +238,15 @@
 
         <TextView
             android:id="@+id/fret6"
-            android:layout_width="45dp"
-            android:layout_height="55dp"
+            android:layout_width="@dimen/problemNumberWidth"
+            android:layout_height="@dimen/problemNumberHeight"
             android:layout_marginRight="5dp"
             android:background="@drawable/textbox_default"
             android:gravity="center_vertical"
             android:text="@string/fret"
             android:textAlignment="center"
             android:textColor="@android:color/white"
-            android:textSize="35sp"
+            android:textSize="@dimen/problemNumberTextSize"
             android:typeface="monospace"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -257,7 +257,7 @@
 
     <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/constraintLayout"
+        android:id="@+id/constraintLayoutNumberPicker"
         android:layout_width="350dp"
         android:layout_height="90dp"
         android:gravity="center"
@@ -269,7 +269,7 @@
 
         <NumberPicker
             android:id="@+id/submitPicker1"
-            android:layout_width="50dp"
+            android:layout_width="@dimen/numberPickerWidth"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:descendantFocusability="blocksDescendants"
@@ -281,7 +281,7 @@
 
         <NumberPicker
             android:id="@+id/submitPicker2"
-            android:layout_width="50dp"
+            android:layout_width="@dimen/numberPickerWidth"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:descendantFocusability="blocksDescendants"
@@ -293,7 +293,7 @@
 
         <NumberPicker
             android:id="@+id/submitPicker3"
-            android:layout_width="50dp"
+            android:layout_width="@dimen/numberPickerWidth"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:descendantFocusability="blocksDescendants"
@@ -305,7 +305,7 @@
 
         <NumberPicker
             android:id="@+id/submitPicker4"
-            android:layout_width="50dp"
+            android:layout_width="@dimen/numberPickerWidth"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:descendantFocusability="blocksDescendants"
@@ -317,7 +317,7 @@
 
         <NumberPicker
             android:id="@+id/submitPicker5"
-            android:layout_width="50dp"
+            android:layout_width="@dimen/numberPickerWidth"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:descendantFocusability="blocksDescendants"
@@ -329,7 +329,7 @@
 
         <NumberPicker
             android:id="@+id/submitPicker6"
-            android:layout_width="50dp"
+            android:layout_width="@dimen/numberPickerWidth"
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:descendantFocusability="blocksDescendants"
